--- a/pet-491b/client/src/components/Pet_Gallery/PetGallery.module.css
+++ b/pet-491b/client/src/components/Pet_Gallery/PetGallery.module.css
@@ -283,3 +283,11 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Box shadow for floating effect */
 }
 
+.favorited {
+    color: red;  /* Favorited pets are highlighted in red */
+}
+
+.notFavorited {
+    color: grey; /* Non-favorited pets are shown in grey*/
+}
+
